lay:mobile: fix anchor aligning on mobile

--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -213,7 +213,6 @@ h6 {
 }
 h2 {
   position: relative;
-  height: 41px;
   line-height: 41px;
 }
 
