--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -153,7 +153,10 @@
       position: relative;
       opacity: 1;
       outline: none;
-
+      @include media-query($on-mobile) {
+        display: block;
+        text-align: right;
+      }
       &::before {
         content: "#";
         position: absolute;
@@ -162,6 +165,9 @@
         font-weight: $bold-weight;
         font-size: 17px; //#c08cff
         font-family: "Font Awesome 6 Free"
+        @include media-query($on-mobile) {
+          right: 0;
+        }   
       }
     }
   }
